# certstream-server-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  config.example.yaml  docker-compose.dual-soak.yml  docker-compose.soak.yml  docker-compose.yml  prometheus.yml  todo.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
benchmarks/: README.md  dummy_subscriber.py  lib.sh  lib_docker.sh  measure_latency.py  measure_latency.sh  run_comparison.sh  run_comparison_docker.sh  run_soak.sh  run_soak_docker.sh  summarize.sh
docs/: CNAME  architecture.html  docs.html  index.html  quickstart.html  robots.txt  sitemap.xml  styles.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_certificate.rs  parse_tile_leaves.rs
grafana/dashboards/: certstream.json
grafana/provisioning/dashboards/: default.yml
soak/: dual-snapshot.sh  monitor-3way.sh  run-matrix.sh  snapshot.sh  start-load.sh  ws-load.py
src/: api.rs  cli.rs  config.rs  dedup.rs  health.rs  hot_reload.rs  lib.rs  main.rs  middleware.rs  rate_limit.rs  sse.rs  state.rs
src/ct/: log_list.rs  mod.rs  normalize.rs  parser.rs  static_ct.rs  watcher.rs
src/ct/catalog/: apple.rs  google.rs  mod.rs  tls_pin.rs  verify.rs
src/models/: certificate.rs  mod.rs
src/websocket/: server.rs
tests/: parser_smoke.rs  parser_snapshot.rs  server_e2e.rs  server_failure_modes.rs  test_static_ct_stability.py
tests/fixtures/catalog/: apple_issuer_ca.der  google_v3_log_list.sig
tests/fixtures/parser_snapshots/: live_ct.json  synthetic.json
