[package]
name = "certstream-server-rust"
version = "1.5.0"
edition = "2024"
repository = "https://github.com/reloading01/certstream-server-rust"
license = "MIT"
description = "High-performance Certificate Transparency log streaming server"

[features]
default = ["simd", "mimalloc"]
simd = ["simd-json"]
# `mimalloc` is wired up only on Linux (see [target.'cfg(target_os = "linux")']
# below). On macOS / Windows / MSVC the feature is a no-op marker — the
# mimalloc dep simply isn't compiled, so the system allocator is used.
# Opt out on Linux with `--no-default-features --features simd`.
#
# History: v1.6.0 initially planned tikv-jemallocator but it silently failed
# to override the global allocator on Alpine/musl (compiled in, but runtime
# allocations still went through musl malloc). mimalloc activates cleanly on
# the same target and gives equivalent fragmentation-control benefits.
mimalloc = ["dep:mimalloc"]
# `sonic` swaps the JSON serializer for cloudwego/sonic-rs. Benchmarks have
# it ~1.5-2× faster than simd-json on typical payloads. Default OFF because
# the behaviour around a handful of edge cases differs subtly from
# serde_json / simd-json:
#
#   * NaN / Infinity floats: serde_json and simd-json reject by default;
#     sonic-rs accepts and emits the non-standard tokens "NaN"/"inf".
#     certstream-server payloads never produce NaN floats (all f64 fields
#     are derived from monotonic millisecond timestamps), but if a future
#     field could contain NaN, that's the failure mode to watch for.
#
#   * Number precision: round-trip for normal f64 values is byte-identical
#     to serde_json. Denormals and very-large integers above 2^53 may
#     stringify slightly differently — irrelevant for our payload.
#
#   * Unicode escaping: serde_json escapes some non-ASCII control bytes
#     that sonic-rs leaves raw. Both are valid JSON per RFC 8259, but
#     downstream consumers doing byte-level diffing may notice.
#
# Sonic-rs uses runtime CPU-feature dispatch (SSE4.2 / AVX2 on x86,
# NEON on arm64) so the binary stays portable.
#
# Opt in with `--features sonic`. If both `simd` and `sonic` are enabled,
# sonic-rs takes precedence (newer + generally faster).
sonic = ["dep:sonic-rs"]

[dependencies]
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
simd-json = { version = "0.17", optional = true }
sonic-rs = { version = "0.5", optional = true }
serde_yaml = "0.9"
x509-parser = "0.18"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
thiserror = "2"
sha1 = "0.11"
sha2 = "0.11"
bytes = "1.11"
parking_lot = "0.12"
smallvec = { version = "1.15", features = ["serde"] }
regex = "1.12"
memchr = "2.8"
tokio-stream = { version = "0.1", features = ["sync"] }
backon = "1"
dashmap = "6"
ahash = "0.8"
notify = { version = "8", features = ["macos_kqueue"] }
subtle = "2.6"
arc-swap = "1.9"
tokio-util = { version = "0.7.18", features = ["full"] }
futures = "0.3.32"
flate2 = "1.1"
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
rcgen = "0.14"

# Linux-only allocator override. mimalloc default-features disabled drops the
# `secure` mode (slower) — we want raw speed + fragmentation control.
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1", default-features = false, optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
# Explicit: panic=unwind retained because main.rs:498 uses
# futures::FutureExt::catch_unwind to recover from worker panics in the CT
# poll loop. Switching to panic=abort would silently break that recovery
# path. Revisit when the catch_unwind site is refactored.
panic = "unwind"

[profile.release.build-override]
opt-level = 3

